// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractValues: JSDoc with multiple types 1`] = `
[
  {
    "comment": {
      "description": "",
      "required": true,
      "title": "",
      "type": [
        "string",
        "null",
      ],
    },
    "key": "securityContext",
  },
]
`;

exports[`extractValues: JSDoc with ref array 1`] = `
[
  {
    "comment": {
      "description": "",
      "items": {
        "$ref": "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.24.0/_definitions.json#/definitions/io.k8s.api.core.v1.EnvFromSource",
      },
      "required": true,
      "title": "",
      "type": "array",
    },
    "key": "envFrom",
  },
]
`;

exports[`extractValues: JSDoc with string array 1`] = `
[
  {
    "comment": {
      "description": "",
      "items": {
        "type": [
          "string",
        ],
      },
      "required": true,
      "title": "",
      "type": "array",
    },
    "key": "command",
  },
]
`;

exports[`extractValues: YAML with comments 1`] = `
[
  {
    "comment": {
      "description": "",
      "required": true,
      "title": "Your name",
      "type": [
        "string",
      ],
    },
    "key": "name",
    "value": "Jul",
  },
  {
    "comment": {
      "description": "",
      "required": true,
      "title": "Your age",
      "type": [
        "number",
      ],
    },
    "key": "age",
    "value": "42",
  },
  {
    "children": [
      {
        "comment": {
          "description": "",
          "required": false,
          "title": "Your country",
          "type": [
            "string",
          ],
        },
        "key": "country",
        "value": "FR",
      },
    ],
    "key": "location",
    "type": [
      "object",
    ],
  },
]
`;

exports[`extractValues: YAML with external references 1`] = `
[
  {
    "comment": {
      "$ref": "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.24.0/_definitions.json#/definitions/io.k8s.api.core.v1.PodSecurityContext",
      "description": "Setup your securityContext to reduce security risks, see https://kubernetes.io/docs/tasks/configure-pod-container/security-context/",
      "required": true,
      "title": "",
    },
    "key": "securityContext",
  },
]
`;

exports[`extractValues: YAML with multiline comment 1`] = `
[
  {
    "children": [
      {
        "comment": {
          "description": "the mother is important in your life",
          "required": false,
          "title": "The mother",
          "type": [
            "object",
          ],
        },
        "key": "mother",
      },
    ],
    "comment": {
      "description": "family blablab
more info about that crazy family",
      "required": true,
      "title": "",
      "type": [
        "string",
        "boolean",
        "number",
        "object",
        "array",
      ],
    },
    "key": "family",
    "type": [
      "object",
    ],
  },
]
`;

exports[`extractValues: YAML with nestedcomments 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "comment": {
              "description": "",
              "required": true,
              "title": "The mother's name",
              "type": [
                "string",
              ],
            },
            "key": "name",
          },
          {
            "children": [
              {
                "comment": {
                  "description": "",
                  "required": false,
                  "title": "The mother mother's name",
                  "type": [
                    "string",
                  ],
                },
                "key": "name",
              },
            ],
            "comment": {
              "description": "",
              "required": false,
              "title": "The mother's mother",
              "type": [
                "object",
              ],
            },
            "key": "mother",
            "type": [
              "object",
            ],
          },
        ],
        "comment": {
          "description": "",
          "required": true,
          "title": "The mother",
          "type": [
            "object",
          ],
        },
        "key": "mother",
        "type": [
          "object",
        ],
      },
    ],
    "key": "family",
    "type": [
      "object",
    ],
  },
]
`;

exports[`extractValues: YAML with sections 1`] = `
[
  {
    "children": [
      {
        "comment": {
          "description": "",
          "required": false,
          "title": "The mother",
          "type": [
            "object",
          ],
        },
        "key": "mother",
      },
    ],
    "comment": {
      "description": "",
      "required": true,
      "title": "blablab",
    },
    "key": "family",
    "type": [
      "object",
    ],
  },
]
`;

exports[`extractValues: YAML without comment 1`] = `
[
  {
    "key": "name",
    "value": "Jul",
  },
  {
    "key": "age",
    "value": "42",
  },
  {
    "children": [
      {
        "key": "country",
        "value": "FR",
      },
    ],
    "key": "location",
    "type": [
      "object",
    ],
  },
]
`;

exports[`extractValues: single-line 1`] = `
[
  {
    "comment": {
      "description": "",
      "required": true,
      "title": "The magic number",
      "type": [
        "number",
      ],
    },
    "key": "number",
    "value": "42",
  },
]
`;

exports[`toJsonSchema: JSDoc with multiple types 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "securityContext": {
      "type": [
        "string",
        "null",
      ],
    },
  },
  "required": [
    "securityContext",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema: JSDoc with ref array 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "envFrom": {
      "items": {
        "$ref": "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.24.0/_definitions.json#/definitions/io.k8s.api.core.v1.EnvFromSource",
      },
      "type": "array",
    },
  },
  "required": [
    "envFrom",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema: JSDoc with string array 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "command": {
      "items": {
        "type": [
          "string",
        ],
      },
      "type": "array",
    },
  },
  "required": [
    "command",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema: YAML with comments 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "age": {
      "default": "42",
      "title": "Your age",
      "type": [
        "number",
      ],
    },
    "location": {
      "properties": {
        "country": {
          "default": "FR",
          "title": "Your country",
          "type": [
            "string",
          ],
        },
      },
      "required": [],
      "type": "object",
    },
    "name": {
      "default": "Jul",
      "title": "Your name",
      "type": [
        "string",
      ],
    },
  },
  "required": [
    "name",
    "age",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema: YAML with external references 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "securityContext": {
      "$ref": "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.24.0/_definitions.json#/definitions/io.k8s.api.core.v1.PodSecurityContext",
      "description": "Setup your securityContext to reduce security risks, see https://kubernetes.io/docs/tasks/configure-pod-container/security-context/",
    },
  },
  "required": [
    "securityContext",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema: YAML with multiline comment 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "family": {
      "description": "family blablab
more info about that crazy family",
      "properties": {
        "mother": {
          "description": "the mother is important in your life",
          "title": "The mother",
          "type": [
            "object",
          ],
        },
      },
      "required": [],
      "type": "object",
    },
  },
  "required": [
    "family",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema: YAML with nestedcomments 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "family": {
      "properties": {
        "mother": {
          "properties": {
            "mother": {
              "properties": {
                "name": {
                  "title": "The mother mother's name",
                  "type": [
                    "string",
                  ],
                },
              },
              "required": [],
              "title": "The mother's mother",
              "type": "object",
            },
            "name": {
              "title": "The mother's name",
              "type": [
                "string",
              ],
            },
          },
          "required": [
            "name",
          ],
          "title": "The mother",
          "type": "object",
        },
      },
      "required": [
        "mother",
      ],
      "type": "object",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`toJsonSchema: YAML with sections 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "family": {
      "properties": {
        "mother": {
          "title": "The mother",
          "type": [
            "object",
          ],
        },
      },
      "required": [],
      "title": "blablab",
      "type": "object",
    },
  },
  "required": [
    "family",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema: YAML without comment 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "age": {
      "default": "42",
      "type": [
        "string",
        "boolean",
        "number",
        "object",
        "array",
      ],
    },
    "location": {
      "properties": {
        "country": {
          "default": "FR",
          "type": [
            "string",
            "boolean",
            "number",
            "object",
            "array",
          ],
        },
      },
      "required": [],
      "type": "object",
    },
    "name": {
      "default": "Jul",
      "type": [
        "string",
        "boolean",
        "number",
        "object",
        "array",
      ],
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`toJsonSchema: add root properties 1`] = `
{
  "$id": "some-id",
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "some": {
      "default": "thing",
      "title": "Some optional string",
      "type": [
        "string",
      ],
    },
  },
  "required": [],
  "title": "schema title",
  "type": "object",
}
`;

exports[`toJsonSchema: single-line 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema",
  "properties": {
    "number": {
      "default": "42",
      "title": "The magic number",
      "type": [
        "number",
      ],
    },
  },
  "required": [
    "number",
  ],
  "type": "object",
}
`;
